Fixed Adv Filter select is out of place
Advanced Filter select ALL/ANY is out of place.

--- a/assets/css/scss/admin-metabox-panel.scss
+++ b/assets/css/scss/admin-metabox-panel.scss
@@ -102,9 +102,5 @@
       margin-left: 8px;
     }
 
-    select {
-      float: left;
-    }
-
   }
 }
